# sharewifi

./: .gitignore  Cargo.toml  LICENSE  README.md  RELEASE_CHECKLIST.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml  main.yml  pr.yml
bindings/: Cargo.toml  build.rs
bindings/src/: lib.rs
npm/: README.md  binary.js  npm-shrinkwrap.json  package.json
src/: app.rs  errors.rs  macos.rs  main.rs  windows.rs
