[package]
authors = ["Joslin, Brady W (Brady) <brady@bradyjoslin.com>"]
edition = "2018"
name = "sharewifi"
version = "0.1.8"

[dependencies]
qrcode = {version = "0.12", default-features = false}
regex = "1.4.5"
run_script = "0.7.0"
structopt = "0.3"
tokio = {version = "1.4", features = ["full"]}

[target.windows]
bindings = {path = "bindings"}
